# fast-fractal-compression

./: .gitignore  CMakeLists.txt  LICENSE  README.md  bench_config.json  bench_no_master.json  benchmarking.py  pcm_Export.h
cmakeModules/: IntelPCM.cmake
lib/: IntelPCM.cmake
lib/pcm/: CMakeLists.txt
lib/pcm/perf/: perf.cpp  perf_failback.cpp
src/: CMakeLists.txt  FractalCompression.cpp  GitVersion.cpp.in  GitVersion.h  common.h  frac_errors.h
src/decoder/: CMakeLists.txt  Decoder.cpp  Decoder.h  QuadTreeDecoder.c  QuadTreeDecoder.h  test_decoder.c  test_decoder.h
src/encoder/: CMakeLists.txt  CacheOptBulkMatching.c  CacheOptMatching.c  Encoder.cpp  Encoder.h  EncoderMacros.h  EncoderTransformations.h  Matching.c  Matching.h  QuadTreeEncoder.c  QuadTreeEncoder.h
src/encoder/scalar/: EncoderUtils.h
src/encoder/simd/: EncoderUtils.h
src/ifs_transformations/: CMakeLists.txt  downsampling_scalar.c  downsampling_vectorized.c  ifs_transform.c  ifs_transform.h
src/utils/: BMPImage.cpp  BMPImage.h  CMakeLists.txt  EncoderUtils.c  EncoderUtils.h  Image.cpp  Image.h  ImageData.c  ImageData.h  PerformanceMeasurements.c  PerformanceMeasurements.h  encoderUtils.c
test_framework/: test_transformation.py
test_framework/standards/: 13.txt  3.txt  4.txt  6.txt  9.txt
test_framework/transformation_log/: master1.bmp.txt  master10.bmp.txt  master11.bmp.txt  master12.bmp.txt  master14.bmp.txt  master2.bmp.txt  master5.bmp.txt  master7.bmp.txt  master8.bmp.txt
test_images/benchmark/: ops.json  resize.sh
